--- a/IntegrationTesting/IntegrationTesting.csproj
+++ b/IntegrationTesting/IntegrationTesting.csproj
@@ -25,8 +25,12 @@
   <ItemGroup>
     <None Remove="Microsoft.AspNetCore.TestHost" />
     <None Remove="Microsoft.AspNetCore.Mvc.Testing" />
+    <None Remove="Stubs\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DummyMVCApp\DummyMVCApp.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Stubs\" />
   </ItemGroup>
 </Project>
